--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -579,7 +579,61 @@ section {
   content: "/";
 }
 
-/*--------------------------------------------------------------
+/*--------------------products------------------------------------------*/
+.product-section {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 50px 0;
+}
+
+.product-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 30px;
+}
+
+.product {
+  background-color: #fff;
+  padding: 20px;
+  text-align: center;
+  border-radius: 5px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+
+.product:hover {
+  transform: translateY(-5px);
+}
+
+.product img {
+  max-width: 100%;
+}
+
+.product h3 {
+  margin-top: 20px;
+  font-size: 1.2rem;
+}
+
+.product p {
+  margin-top: 10px;
+  font-size: 0.9rem;
+}
+
+.product button {
+  margin-top: 20px;
+  background-color: #0077ff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.product button:hover {
+  background-color: #0052cc;
+}
 
 /*--------------------------------------------------------------
 # Footer
