--- a/products/CSS/styles.css
+++ b/products/CSS/styles.css
@@ -20,3 +20,27 @@
 }
 
 /* end */
+
+
+/* ceiling light */
+/* header section start */
+
+.header_se {
+  width: 100%;
+  float: left;
+  background-image: url(../img/CEILING/header/ceiling-bg.png);
+  height: auto;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+.header_bg {
+  width: 100%;
+  float: left;
+  background-image: url(../img/CEILING/header/ceiling-bg.png);
+  height: auto;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+/* end */
