setting up panel lamps page

--- a/products/CSS/styles.css
+++ b/products/CSS/styles.css
@@ -90,3 +90,26 @@
 }
 
 /* end */
+
+/* panel light */
+/* header section start */
+
+.header_sett {
+  width: 100%;
+  float: left;
+  background-image: url(../img/panel/display/panel_bg.png);
+  height: auto;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+.header_bg {
+  width: 100%;
+  float: left;
+  background-image: url(../img/panel/display/panel_bg.png);
+  height: auto;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+/* end */
