working on panel lamps

--- a/products/CSS/styles.css
+++ b/products/CSS/styles.css
@@ -97,7 +97,7 @@
 .header_sett {
   width: 100%;
   float: left;
-  background-image: url(../img/panel/display/panel_bg.png);
+  background-image: url(../img/panel/display/panel_bg.jpg);
   height: auto;
   background-size: 100%;
   background-repeat: no-repeat;
@@ -106,7 +106,7 @@
 .header_bg {
   width: 100%;
   float: left;
-  background-image: url(../img/panel/display/panel_bg.png);
+  background-image: url(../img/panel/display/panel_bg.jpg);
   height: auto;
   background-size: 100%;
   background-repeat: no-repeat;
